# hltv-stats

./: README.md  example.ipynb  pyproject.toml
hltv_stats/: __init__.py  match.py  parser.py  team.py  teams.py  upcoming_matches.py
